# CIRA-Algos

./: .gitignore  CMakeLists.txt  Install.sh  README.md  both.sh  conanfile.txt  install.sh  main  rebuild.sh  run.sh
cpu/dug/: dugcompile.sh  dugrun.sh  dugsubmit.sh
cpu/scripts/: build.sh  debug.sh  install.sh  run.sh
cpu/src/: brute.cpp  brute.h  io.cpp  io.h  main.cpp  writer.h
dug/: dugcompile.sh  dugrun.sh
gpu/: brute.cu
gpu/src/: brute.cu  t.cu
results/: dm_50_fluence_500.cad
scripts/: build.sh  debug.sh  run.sh
src/: CCfits  brute.cpp  brute.h  build.sh  dugcompile.sh  dugrun.sh  main  main.cpp  output.cad  run.sh  t.txt  test  test.cpp  writer.cpp  writer.h
src/dug/: dugsubmit.sh
src/results/: dm_50_fluence_1000.cad  dm_50_fluence_300.cad  dm_50_fluence_400.cad
src/test/real/askap_samples/: 2017-04-16-22_16_47_0000000000000000.000000.21_transposed.cad
src/test/real/mwa_samples/: 20230125_1.cad  20230125_2.cad  20230125_4.cad  20230125_5.cad  20230125_6.cad  20230125_7.cad  20230131_2.cad  20230131_3.cad  20230131_5.cad  20230131_6.cad  20230131_7.cad
src/test/simul/test_files/: dm_50_fluence_1000.cad  dm_50_fluence_400.cad  dm_50_fluence_500.cad
